--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listCategorie"
+        android:id="@+id/rvCategorie"
         android:layout_marginVertical="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
