--- a/app/src/main/res/layout/item_categorie.xml
+++ b/app/src/main/res/layout/item_categorie.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="160dp"
+    android:layout_height="90dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="20dp"
+    app:cardBackgroundColor="@color/todo_background_card"
+    android:layout_marginStart="15dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:paddingHorizontal="10dp"
+        >
+        <TextView
+            android:id="@+id/tvCategorie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Prueba"
+            android:textColor="@color/white"
+            android:textSize="19sp"
+            android:textStyle="bold"
+            />
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            tools:background="@color/white"
+            />
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
