--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/todo_background_todo_app"
-    tools:context=".MainActivity">
-
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/title"
-    android:textColor="@color/white"
-    android:textStyle="bold"
-    android:textSize="40sp"
-    android:textAlignment="center"
-    android:layout_marginVertical="25dp"
-    />
-
-    <TextView
+    >
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/categories"
-        android:layout_marginHorizontal="20dp"
-        android:textSize="20sp"
-        android:textColor="@color/todo_subtitle_text"
-        android:textStyle="bold"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/todo_background_todo_app"
+        tools:context=".MainActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCategorie"
-        android:layout_marginVertical="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="40sp"
+            android:textAlignment="center"
+            android:layout_marginVertical="25dp"
+            />
 
-    <TextView
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/categories"
+            android:layout_marginHorizontal="20dp"
+            android:textSize="20sp"
+            android:textColor="@color/todo_subtitle_text"
+            android:textStyle="bold"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvCategorie"
+            android:layout_marginVertical="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/task"
+            style="@style/TaskSubtitle"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvTask"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fbtnNewTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/task"
-        style="@style/TaskSubtitle"
+        app:backgroundTint="@color/todo_accent"
+        android:src="@drawable/ic_plus"
+        app:tint="@color/white"
+        app:fabSize="normal"
+        android:layout_gravity="end | bottom"
+        android:layout_margin="20dp"
         />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvTask"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-</LinearLayout>
+</FrameLayout>
