--- a/app/src/main/res/layout/dialog_task.xml
+++ b/app/src/main/res/layout/dialog_task.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="295dp"
     android:layout_height="wrap_content"
+    android:padding="15dp"
     android:orientation="vertical"
     android:background="@color/todo_background_todo_app"
 
@@ -18,6 +19,7 @@
         android:textStyle="bold"
         />
     <RadioGroup
+        android:id="@+id/rgCategories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -45,6 +47,7 @@
             />
     </RadioGroup>
     <Button
+        android:id="@+id/btnAddTask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Tarea"
