--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="20dp"
     app:cardBackgroundColor="@color/todo_background_card"
+    android:layout_margin="25dp"
     >
     <LinearLayout
         android:layout_width="match_parent"
