--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -7,7 +7,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="20dp"
     app:cardBackgroundColor="@color/todo_background_card"
-    android:layout_margin="25dp"
+    android:layout_marginHorizontal="15dp"
+    android:layout_marginTop="10dp"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,12 +16,12 @@
         android:gravity="center|left"
         android:orientation="horizontal"
         >
-        <View
-            android:id="@+id/colorTask"
+        <CheckBox
+            android:id="@+id/checkItemTask"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            tools:background="@color/todo_business_category"
-            android:layout_marginHorizontal="15dp"
+            android:layout_marginHorizontal="10dp"
+            tools:buttonTint="@color/todo_business_category"
             />
         <TextView
             android:id="@+id/tvTask"
@@ -28,7 +29,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textAllCaps="true"
             tools:text="Prueba"
             />
