--- a/app/src/main/res/layout/item_categorie.xml
+++ b/app/src/main/res/layout/item_categorie.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/itemCategorie"
     android:layout_width="160dp"
     android:layout_height="90dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
